# sglang-omni

./: .gitignore  .isort.cfg  LICENSE  README.html  README.md  change.md  comments.md  config_qwen3_omni_text_first.yaml  genindex.html  index.html  new_plan.md  objects.inv  plan.md  pyproject.toml  reflection.md  search.html  searchindex.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yaml  2-feature-request.yaml
.github/scripts/: run_examples.sh
.github/workflows/: CODEOWNERS  publish-docs.yaml  rerun-ci.yaml  test-examples.yaml  test.yaml
_sources/: index.rst
_sources/basic_usage/: tts_s2pro.md
_sources/developer_reference/: architecture.md
_sources/get_started/: installation.md
basic_usage/: tts_s2pro.html
benchmarks/: README.md  benchmark_s1_seed_tts.py  benchmark_s2pro_compile.py  eval_wer.py  plot_s2pro_results.py  profile_s2pro_sglang.py  relay.html
benchmarks/bench_qwen3_omni/: bench_huggingface.py  bench_sglang_omni.py
benchmarks/performance/tts/: benchmark_tts_wer.py
developer_reference/: apiserver_design.html  architecture.html  relay_design.html
docs/: Makefile  conf.py  index.rst  omni_engine_design.md  omni_engine_progress.md  s2pro_perf_optimization_log.md  torch_vs_hf_comparison.md
docs/developer_reference/: apiserver_design.md  talker_decode_parity.md
docs/get_started/: apiserver_quickstart.md  installation.md
examples/: README.md  encoder_demo.py  qwen3_video_test.py  run_cosyvoice3_demo.py  run_openai_llama_server.py  run_qwen3_asr_demo.py  run_qwen3_asr_multi_stage_demo.py  run_qwen3_omni_text_first.py  run_qwen3_tts_ar_demo.py  run_three_stage_demo.py  run_two_stage_demo.py  run_two_stage_llama_demo.py  three_stage_demo.py  two_stage_demo.py
examples/configs/: s2pro_tts.yaml
get_started/: apiserver_quickstart.html  installation.html
playground/: README.md  __init__.py  app.js  fs_api.py  index.html  start_playground.sh  styles.css
playground/gradio/: app.py  start.sh
playground/tts/: app.py  start.sh
playground/web/: app.py  start.sh
playground/web/frontend/: app.js  index.html
scripts/: bisect_attention.py  bisect_layers.py  bisect_moe_detail.py  check_moe_determinism.py  check_sdpa_determinism.py  compare_decode_logits.py  compare_layer0_detail.py  convert_hf_tokenizer.py  start_playground_and_fs.sh  test_load_talker.py  test_talker_inference.py  verify_grouped_mm_hypothesis.py
scripts/qwen3_omni_parity/: common.py  hf_capture.py  predictor_boundary_matrix.py  runtime_capture.py  talker_hidden_boundary.py  talker_layer_boundary_matrix.py  topdown_matrix.py
sglang_omni/: __init__.py  control_plane.py  coordinator.py  data_plane.py  environ.py  scheduler.py  stage.py  types.py  utils.py
sglang_omni/cli/: cli.py  config.py  serve.py
sglang_omni/client/: client.py  types.py
sglang_omni/config/: compiler.py  manager.py  mp_runner.py  qwen3_omni.py  schema.py
sglang_omni/core/: types.py
sglang_omni/engine/: __init__.py  sglang_engine.py
sglang_omni/engines/: __init__.py  base.py
sglang_omni/executors/: direct_model_executor.py  engine_executor.py  frontend_executor.py  fused_executor.py  preprocessing_executor.py
sglang_omni/frontends/: __init__.py  audio.py  video.py
sglang_omni/models/: registry.py  talker_entry.py  weight_loader.py  weight_utils.py
sglang_omni/pipeline/: __init__.py  control_plane.py  coordinator.py  stage.py  worker.py
sglang_omni/preprocessing/: __init__.py  audio.py  base.py  cache_key.py  image.py  resource_connector.py  video.py
sglang_omni/profiler/: base_profiler.py  torch_profiler.py
sglang_omni/proto/: __init__.py  data.py  messages.py  request.py  stage.py
sglang_omni/relay/: __init__.py  base_operations.py  descriptor.py  nccl.py  nixl.py  shm_relay.py
sglang_omni/serve/: __init__.py  fs_api.py  launcher.py  openai_api.py  protocol.py
sglang_omni/transport/: control_plane.py
sglang_omni/utils/: __init__.py  common.py  hf.py  misc.py
tests/: test_encoder_overlap.py  test_qwen3_omni_pipeline_merge.py  test_relay_unified_multiprocess.py  test_sglang_engine.py  test_stream_builder.py  test_thinker_talker_e2e.py  test_utils.py  test_video_frontend.py  test_video_integration.py
tests/test_model/: test_qwen3_omni_parity_matrix.py  test_video_integration.py
(+156 files in other folders)
