[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-omni"
version = "0.1.0"
description = "Multi-stage pipeline framework for omni models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "pyzmq>=25.0.0",          # ZMQ messaging for control plane
    "msgpack>=1.0.0",         # Message serialization
    "numpy>=1.24.0",          # Array operations
    "pydantic>=2.0.0",        # Data validation and serialization
    "torch>=2.9.1",           # PyTorch for tensor operations
    "accelerate>=0.27.0",     # init_empty_weights for meta initialization
    "transformers>=4.57.0",   # HF models/tokenizers
    "safetensors>=0.4.3",     # Direct weight loading
    "pillow>=10.0.0",         # Required by AutoImageProcessor
    "huggingface-hub>=0.36.0",# HF model downloads
    "fastapi>=0.110.0",       # OpenAI-compatible API adapter
    "uvicorn>=0.23.0",        # ASGI server for FastAPI
    # Testing dependencies
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "nixl",
    "logger",
    "httpx",
    "xxhash>=3.0.0",
    "av>=16.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sglang_omni*"]
